# dirtplug

./: .gitpod.Dockerfile  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.devcontainer/: devcontainer.json
docs/: README.md
scripts/: flash.sh  run-wokwi.sh
src/: main.rs
