[package]
name = "flywheel"
version = "0.1.0"
authors = ["Sudharshan S <sudharsh@gmail.com>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
pio = ["esp-idf-sys/pio"]

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-sys = { version = "0.31.6", default-features = false, features = ["binstart", "panic_handler", "alloc_handler"] }
esp-idf-svc = { version = "0.42", default-features = false, features = ["alloc"] }
esp-idf-hal = { version = "0.38.0", default-features = false, feature = ["alloc"] }
embedded-hal = { version = "0.2.1", default-features = false, feature = ["alloc"]}

[build-dependencies]
embuild = "0.29"
anyhow = "1"
